--- a/reverse_engineering.rmd
+++ b/reverse_engineering.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Reverse Engineering Project"
 author: "Devon Milley, Timothy Dashiell, Emmett Gartner"
-date: "Date here"
+date: "03/03/2022"
 output:
   html_document:
     theme: cerulean
