--- a/data_analysis_project/data_analysis_project.Rmd
+++ b/data_analysis_project/data_analysis_project.Rmd
@@ -47,6 +47,8 @@ library(lubridate)
 
 In this section, describe the source of the data, write a basic data dictionary for data you are working with, and discuss any caveats or issues you discovered working with this data. 
 
+There are 551 rows and 28 columns in the dataset.
+
 ```{r}
 # Load required data
 
