--- a/data_analysis_project/data_analysis_project.Rmd
+++ b/data_analysis_project/data_analysis_project.Rmd
@@ -91,6 +91,7 @@ In this notebook, we are reverse engineering five sentences from the story.
 * **Analysis summary**: [Write up two to three sentences describing the results of your analysis.  Were you able to confirm the finding? If not, why not?]
 
 ```{r}
+# lets do quartiles of percentages !!!
 # Put code to reverse engineer sentence here
 holc_count_white <- metro_grades %>% 
   group_by(holc_grade) %>% 
